--- a/css/style.css
+++ b/css/style.css
@@ -6,34 +6,116 @@ body {
   line-height: 1.42857143;
   text-transform: uppercase;
 }
+
 a {
   color: #e8e8e8;
   text-decoration: none;
 }
+
 .wrapper {
   max-width: 1170px;
   margin: 0 auto;
   padding: 0 15px;
 }
+
 .fa {
   font-size: 17px;
 }
+
 .floatright {
   float: right;
   position: relative;
 }
+
 span.color-pink {
   color: #ff6766;
 }
+
 span.color-gainsboro {
   color: gainsboro;
 }
+
 .multi-line {
   border-bottom: 2px solid #ff6766;
   border-top: 1px solid #ff6766;
   height: 5px;
   margin: 0 auto 20px;
   width: 40px;
+}
+
+.item {
+  background-color: white;
+  text-align: center;
+  margin: 15px;
+  width: 260px;
+  height: 430px;
+  position: relative;
+  float: left;
+}
+.item .item-image {
+  position: relative;
+}
+.item .item-image img {
+  width: 100%;
+  height: auto;
+}
+.item .item-image .item-menu {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  opacity: 0;
+  transition: .25s;
+}
+.item .item-image .item-menu ul {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
+  list-style: outside none none;
+  margin: 165px 0 0;
+  padding: 0;
+}
+.item .item-image .item-menu ul li {
+  padding: 2px 7px;
+  border-right: 1px solid gainsboro;
+  display: inline-block;
+}
+.item .item-image .item-menu ul li a {
+  color: black;
+}
+.item .item-image .item-menu ul li:first-child {
+  padding-right: none;
+  border-right: none;
+}
+.item .item-image .item-menu ul li:last-child {
+  border-right: none;
+}
+.item .item-new {
+  font-size: 11px;
+  font-weight: bold;
+  border: 1px solid #ff6766;
+  left: 15px;
+  position: absolute;
+  top: 15px;
+}
+.item .item-new p {
+  padding: 2px 10px;
+  background-color: #ff6766;
+  color: white;
+}
+.item .item-sub {
+  padding: 20px 10px;
+}
+.item .item-sub .br {
+  display: block;
+}
+.item .item-sub .color-gainsboro {
+  text-decoration: line-through;
+}
+
+.item:hover .item-menu {
+  opacity: 1;
+  transition: all 0.25s ease 0s;
 }
 
 /*-----------HEADER LEVEL ONE------------*/
@@ -474,12 +556,5 @@ span.color-gainsboro {
   color: black;
 }
 .trending-clothing .mySlides {
-  height: 360px;
-}
-.trending-clothing .mySlides .item {
-  background-color: white;
-  margin: 15px;
-  width: 260px;
-  height: 342px;
-  float: left;
+  height: 430px;
 }
