--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,6 +43,94 @@ span.color-gainsboro {
     width: 40px;
 }
 
+.item {
+    background-color: white;
+    text-align: center;
+    margin: 15px;
+    width: 260px;
+    height: 430px;
+    position: relative;
+    float: left;
+    
+    .item-image {
+        position: relative;
+      
+        img {
+            width: 100%;
+            height: auto;
+        }
+        
+        .item-menu {
+            background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            opacity: 0;
+            transition: .25s;
+            
+            ul {
+                background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
+                list-style: outside none none;
+                margin: 165px 0 0;
+                padding: 0;
+                
+                li {
+                    padding: 2px 7px;
+                    border-right: 1px solid gainsboro;
+                    display: inline-block;
+                    
+                    a {
+                        color: black;
+                    }
+                }
+                
+                li:first-child {
+                    padding-right: none;
+                    border-right: none;
+                }
+                
+                li:last-child {
+                    border-right: none;
+                }
+            }
+        }
+    }
+            
+    .item-new {
+        font-size: 11px;
+        font-weight: bold;
+        border: 1px solid #ff6766;
+        left: 15px;
+        position: absolute;
+        top: 15px;
+        
+        p {
+            padding: 2px 10px;
+            background-color: #ff6766;
+            color: white;
+        }
+    }
+    
+    .item-sub {
+        padding: 20px 10px;
+        
+        .br {
+            display: block;
+        }
+        
+        .color-gainsboro {
+            text-decoration: line-through;
+        }
+    }
+}
+
+.item:hover .item-menu {
+    opacity: 1;
+    transition: all 0.25s ease 0s;
+}
+
 /*-----------HEADER LEVEL ONE------------*/
 
 .header-level-one {
@@ -571,14 +659,6 @@ span.color-gainsboro {
     }
     
     .mySlides{
-        height: 360px;
-        
-        .item {
-            background-color: white;
-            margin: 15px;
-            width: 260px;
-            height: 342px;
-            float: left;
-        }
+        height: 430px;
     }
 }
