--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,12 +43,15 @@ span.color-gainsboro {
     width: 40px;
 }
 
-.item {
+.mySlide{
+    height: 430px;
+  
+    .item {
     background-color: white;
     text-align: center;
     margin: 15px;
     width: 260px;
-    height: 430px;
+    height: inherit;
     position: relative;
     float: left;
     
@@ -126,9 +129,39 @@ span.color-gainsboro {
     }
 }
 
-.item:hover .item-menu {
-    opacity: 1;
-    transition: all 0.25s ease 0s;
+    .item:hover .item-menu {
+        opacity: 1;
+        transition: all 0.25s ease 0s;
+    }
+}
+
+.dots-section {
+    position: absolute;
+    left: 50%;
+    width: 60%;
+    padding-left: 0;
+    margin-left: -30%;
+    text-align: center;
+    
+    .dot {
+        background-color: #ddd;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        cursor: pointer;
+        display: inline-block;
+        height: 10px;
+        margin: 1px;
+        text-indent: -999px;
+        width: 10px;
+    }
+    
+    .active {
+        background-color: #FF6766;
+        border: 1px solid #FF6766;
+        height: 12px;
+        margin: 0;
+        width: 12px;
+    }
 }
 
 /*-----------HEADER LEVEL ONE------------*/
@@ -642,23 +675,39 @@ span.color-gainsboro {
         font-size: 26px;
     }
     
-    .content .select {
-        margin-bottom: 42px;
-        text-align: center;
-        font-weight: bold;
-        display: block;
-        
-        a {
-            margin: 0px 5px;
+    .content {
+        position: relative;
+    
+        .select {
+            margin-bottom: 42px;
+            text-align: center;
             font-weight: bold;
+            display: block;
+            
+            a {
+                margin: 0px 5px;
+                font-weight: bold;
+            }
+            
+            a.active {
+                color: black;
+            }
         }
         
-        a.active {
-            color: black;
+        .dots-section {
+            top: 540px;
         }
     }
     
     .mySlides{
         height: 430px;
+        
+        .mySlide {
+            display: none;
+        }
+        
+        .mySlide:first-child {
+            display: block;
+        }
     }
 }
