--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ span.color-gainsboro {
 .mySlide {
   height: 430px;
 }
+
 .mySlide .item {
   background-color: white;
   text-align: center;
@@ -55,13 +56,16 @@ span.color-gainsboro {
   position: relative;
   float: left;
 }
+
 .mySlide .item .item-image {
   position: relative;
 }
+
 .mySlide .item .item-image img {
   width: 100%;
   height: auto;
 }
+
 .mySlide .item .item-image .item-menu {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
   height: 100%;
@@ -70,29 +74,36 @@ span.color-gainsboro {
   top: 0;
   width: 100%;
   opacity: 0;
-  transition: .25s;
+  -webkit-transition: .25s;
+          transition: .25s;
 }
+
 .mySlide .item .item-image .item-menu ul {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
   list-style: outside none none;
   margin: 165px 0 0;
   padding: 0;
 }
+
 .mySlide .item .item-image .item-menu ul li {
   padding: 2px 7px;
   border-right: 1px solid gainsboro;
   display: inline-block;
 }
+
 .mySlide .item .item-image .item-menu ul li a {
   color: black;
 }
+
 .mySlide .item .item-image .item-menu ul li:first-child {
   padding-right: none;
   border-right: none;
 }
+
 .mySlide .item .item-image .item-menu ul li:last-child {
   border-right: none;
 }
+
 .mySlide .item .item-new {
   font-size: 11px;
   font-weight: bold;
@@ -101,23 +112,29 @@ span.color-gainsboro {
   position: absolute;
   top: 15px;
 }
+
 .mySlide .item .item-new p {
   padding: 2px 10px;
   background-color: #ff6766;
   color: white;
 }
+
 .mySlide .item .item-sub {
   padding: 20px 10px;
 }
+
 .mySlide .item .item-sub .br {
   display: block;
 }
+
 .mySlide .item .item-sub .color-gainsboro {
   text-decoration: line-through;
 }
+
 .mySlide .item:hover .item-menu {
   opacity: 1;
-  transition: all 0.25s ease 0s;
+  -webkit-transition: all 0.25s ease 0s;
+          transition: all 0.25s ease 0s;
 }
 
 .dots-section {
@@ -128,6 +145,7 @@ span.color-gainsboro {
   margin-left: -30%;
   text-align: center;
 }
+
 .dots-section .dot {
   background-color: #ddd;
   border: 1px solid #ddd;
@@ -139,6 +157,7 @@ span.color-gainsboro {
   text-indent: -999px;
   width: 10px;
 }
+
 .dots-section .active {
   background-color: #FF6766;
   border: 1px solid #FF6766;
@@ -154,31 +173,38 @@ span.color-gainsboro {
   background: none repeat scroll 0 0 #212121;
   padding: 12px 0;
 }
+
 .header-level-one a {
   color: #e8e8e8;
 }
+
 .header-level-one a:hover, .header-level-one a:active {
   color: #ff6766;
 }
+
 .header-level-one i {
   font-size: 17px;
   margin-right: 7px;
 }
+
 .header-level-one .part-section {
   width: 50%;
   float: left;
   padding-bottom: -8px;
 }
+
 .header-level-one .part-section img {
   float: left;
   margin-right: 10px;
 }
+
 .header-level-one .part-section p {
   color: #e8e8e8;
   font-size: 12px;
   font-weight: 400;
   float: left;
 }
+
 .header-level-one .part-section ul.language-list {
   margin: 0 15px;
   font-size: 12px;
@@ -192,17 +218,21 @@ span.color-gainsboro {
   color: #e8e8e8;
   padding: 40px 0;
 }
+
 .header-level-two a {
   color: black;
 }
+
 .header-level-two a:hover, .header-level-two a:active {
   color: black;
   text-decoration: underline;
 }
+
 .header-level-two .search-wrapper {
   width: 25%;
   float: left;
 }
+
 .header-level-two .search-wrapper input[type="text"] {
   background: none repeat scroll 0 0 #f7f8f9;
   border: medium none;
@@ -212,21 +242,25 @@ span.color-gainsboro {
   padding-left: 10px;
   padding-top: 3px;
 }
+
 .header-level-two .logo {
   text-align: center;
   width: 50%;
   float: left;
 }
+
 .header-level-two .buttons-wrapper {
   margin: auto 0;
   width: 25%;
   float: left;
 }
+
 .header-level-two .buttons-wrapper li {
   margin: 0 10px;
   display: inline-block;
   float: right;
 }
+
 .header-level-two .buttons-wrapper .comments-count {
   background: url("../images/header-level-two/wishlist_bg.png") no-repeat scroll 0 0 transparent;
   height: 22px;
@@ -236,6 +270,7 @@ span.color-gainsboro {
   width: 26px;
   text-align: center;
 }
+
 .header-level-two .buttons-wrapper .comments-count span {
   color: white;
 }
@@ -246,10 +281,12 @@ span.color-gainsboro {
   color: #e8e8e8;
   background: none repeat scroll 0 0 #ff6766;
 }
+
 .header-level-three a {
   color: white;
   font-weight: bold;
 }
+
 .header-level-three .menu-left {
   padding: 23px 0;
   background: none repeat scroll 0 0 #f06160;
@@ -257,15 +294,19 @@ span.color-gainsboro {
   position: relative;
   float: left;
 }
+
 .header-level-three .menu-left a {
   margin: auto 5px;
 }
+
 .header-level-three .menu-left a span {
   margin-left: 15px;
 }
+
 .header-level-three .menu-left .fa-bars {
   margin-left: 65px;
 }
+
 .header-level-three .menu-left .cat-menu {
   display: none;
   position: absolute;
@@ -274,21 +315,25 @@ span.color-gainsboro {
   box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+
 .header-level-three .menu-left .cat-menu a {
   color: black;
   display: inline-block;
   width: 220px;
 }
+
 .header-level-three .menu-left .menu-list {
   color: #ff6766;
   list-style: disc;
   margin: 12px 0;
   margin-left: 35px;
 }
+
 .header-level-three .menu-left .menu-list li {
   padding: 10px 0;
   position: relative;
 }
+
 .header-level-three .menu-left .menu-list li:after {
   content: '';
   position: absolute;
@@ -298,31 +343,39 @@ span.color-gainsboro {
   left: -15px;
   top: 40px;
 }
+
 .header-level-three .menu-left .menu-list li:last-child:after {
   height: 0px;
 }
+
 .header-level-three .menu-left .shirts-button .menu-list li {
   margin-left: 35px;
 }
+
 .header-level-three .menu-left .shirts-button:hover .shirts-menu {
   display: block;
 }
+
 .header-level-three .menu-left .category-menu {
   top: 66px;
 }
+
 .header-level-three .menu-left .shirts-menu {
   top: -12px;
   left: 220px;
 }
+
 .header-level-three .menu-left:hover .category-menu {
   display: block;
 }
+
 .header-level-three .menu-center {
   border-top: 5px solid #f7f8f9;
   width: 66%;
   height: 61px;
   float: left;
 }
+
 .header-level-three .menu-center li {
   width: 16%;
   padding: 18px 3px 23px 2px;
@@ -331,6 +384,7 @@ span.color-gainsboro {
   float: left;
   position: relative;
 }
+
 .header-level-three .menu-center li:hover:before {
   content: '';
   position: absolute;
@@ -340,6 +394,7 @@ span.color-gainsboro {
   left: 0;
   top: -5px;
 }
+
 .header-level-three .menu-right {
   padding: 23px 0;
   background: none repeat scroll 0 0 #f06160;
@@ -347,11 +402,13 @@ span.color-gainsboro {
   position: relative;
   float: left;
 }
+
 .header-level-three .menu-right a > img {
   float: left;
   margin-left: 30px;
   margin-right: 10px;
 }
+
 .header-level-three .menu-right .cart-menu {
   display: none;
   position: absolute;
@@ -362,34 +419,42 @@ span.color-gainsboro {
   box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+
 .header-level-three .menu-right .cart-menu a {
   color: black;
 }
+
 .header-level-three .menu-right .cart-menu .cart-item {
   padding: 14px;
   padding-right: 50px;
   height: 90px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
+
 .header-level-three .menu-right .cart-menu .cart-item .item-left {
   width: 37%;
   float: left;
 }
+
 .header-level-three .menu-right .cart-menu .cart-item .item-left img {
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
+
 .header-level-three .menu-right .cart-menu .cart-item .item-right {
   width: 63%;
   float: left;
   position: relative;
 }
+
 .header-level-three .menu-right .cart-menu .cart-item .item-right h5 {
   font-weight: bold;
 }
+
 .header-level-three .menu-right .cart-menu .cart-item .item-right span {
   font-weight: bold;
   color: #ff6766;
 }
+
 .header-level-three .menu-right .cart-menu .cart-item .item-right .close-icon {
   color: black;
   height: 14px;
@@ -399,21 +464,26 @@ span.color-gainsboro {
   width: 14px;
   text-align: center;
 }
+
 .header-level-three .menu-right .cart-menu .cart-total {
   height: 20px;
   margin: 15px 15px;
 }
+
 .header-level-three .menu-right .cart-menu .cart-total p {
   font-weight: bold;
   color: black;
 }
+
 .header-level-three .menu-right .cart-menu .cart-total .total-left, .header-level-three .menu-right .cart-menu .cart-total .total-right {
   width: 50%;
   float: left;
 }
+
 .header-level-three .menu-right .cart-menu .cart-total .total-right p {
   text-align: right;
 }
+
 .header-level-three .menu-right .cart-menu .cart-buttons .cart-button {
   background: none repeat scroll 0 0 #ff6766;
   padding: 10px 0;
@@ -422,12 +492,15 @@ span.color-gainsboro {
   height: 20px;
   float: left;
 }
+
 .header-level-three .menu-right .cart-menu .cart-buttons .cart-button a {
   color: #e8e8e8;
 }
+
 .header-level-three .menu-right .cart-menu .cart-buttons .cart-button:hover {
   background: none repeat scroll 0 0 #f06160;
 }
+
 .header-level-three .menu-right:hover .cart-menu {
   display: block;
 }
@@ -437,28 +510,34 @@ span.color-gainsboro {
   background-image: url(../images/banner/banner_bg.png);
   height: 500px;
 }
+
 .banner .description-left {
   padding: 110px 0;
   width: 50%;
   position: relative;
 }
+
 .banner .description-left span {
   display: block;
 }
+
 .banner .description-left span.name {
   font-weight: bolder;
   font-size: 65px;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #fff;
 }
+
 .banner .description-left span.description {
   font-weight: bolder;
   font-size: 16px;
   position: relative;
 }
+
 .banner .description-left span.description span {
   display: inline;
 }
+
 .banner .description-left span.description:after {
   content: '';
   position: absolute;
@@ -468,14 +547,17 @@ span.color-gainsboro {
   left: 5px;
   top: 35px;
 }
+
 .banner .description-left .additions {
   font-weight: bold;
   font-size: 16px;
   margin: 35px 0;
 }
+
 .banner .description-left .additions span {
   display: inline;
 }
+
 .banner .description-left .button {
   background-color: transparent;
   border: 3px solid #ff6766;
@@ -484,10 +566,12 @@ span.color-gainsboro {
   height: 20px;
   float: left;
 }
+
 .banner .description-left .button a {
   font-weight: bolder;
   color: black;
 }
+
 .banner .description-left .offer-tag {
   background: url("../images/banner/circle.png") no-repeat scroll 0 0 transparent;
   width: 103px;
@@ -497,16 +581,19 @@ span.color-gainsboro {
   top: 20%;
   text-align: center;
 }
+
 .banner .description-left .offer-tag .text {
   margin: 26%;
   width: 40%;
   display: block;
 }
+
 .banner .description-left .offer-tag .text span {
   display: block;
   font-weight: bold;
   color: white;
 }
+
 .banner .description-left .offer-tag:before {
   display: inline-block;
   content: "";
@@ -523,6 +610,7 @@ span.color-gainsboro {
   padding-top: 36px;
   position: relative;
 }
+
 .features .wrapper:after {
   position: absolute;
   content: "";
@@ -531,21 +619,25 @@ span.color-gainsboro {
   border-bottom: 2px dotted #999;
   width: 86%;
 }
+
 .features ul li {
   display: block;
   float: left;
   width: 25%;
   height: 40px;
 }
+
 .features ul li img {
   height: 40px;
   float: left;
   margin-right: 10px;
 }
+
 .features ul li p {
   font-weight: bold;
   padding-right: 20px;
 }
+
 .features ul li:last-child p {
   padding-top: 10px;
 }
@@ -563,39 +655,92 @@ span.color-gainsboro {
 .trending-clothing {
   padding: 95px 0;
 }
+
 .trending-clothing .description > span {
   text-align: center;
   font-weight: bold;
   display: block;
 }
+
 .trending-clothing .description .name {
   font-size: 26px;
 }
+
 .trending-clothing .content {
   position: relative;
 }
+
 .trending-clothing .content .select {
   margin-bottom: 42px;
   text-align: center;
   font-weight: bold;
   display: block;
 }
+
 .trending-clothing .content .select a {
   margin: 0px 5px;
   font-weight: bold;
 }
+
 .trending-clothing .content .select a.active {
   color: black;
 }
+
 .trending-clothing .content .dots-section {
   top: 540px;
 }
+
 .trending-clothing .mySlides {
   height: 430px;
 }
+
 .trending-clothing .mySlides .mySlide {
   display: none;
 }
+
 .trending-clothing .mySlides .mySlide:first-child {
   display: block;
+}
+
+/*-----------FEATURED PRODUCTS------------*/
+.featured-products {
+  padding: 95px 0;
+}
+
+.featured-products .description > span {
+  text-align: center;
+  font-weight: bold;
+  display: block;
+}
+
+.featured-products .description .name {
+  font-size: 26px;
+}
+
+.featured-products .content {
+  position: relative;
+}
+
+.featured-products .content .select {
+  margin-bottom: 42px;
+  text-align: center;
+  font-weight: bold;
+  display: block;
+}
+
+.featured-products .content .select a {
+  margin: 0px 5px;
+  font-weight: bold;
+}
+
+.featured-products .content .select a.active {
+  color: black;
+}
+
+.featured-products .content .dots-section {
+  top: 540px;
+}
+
+.featured-products .mySlides {
+  height: 860px;
 }
