--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,28 @@ span.color-gainsboro {
   width: 40px;
 }
 
+.button {
+  background-color: transparent;
+  border: 3px solid #ff6766;
+  padding: 10px 15px;
+  text-align: center;
+  height: 20px;
+  float: left;
+}
+
+.button a {
+  font-weight: bolder;
+  color: black;
+}
+
+.button:hover {
+  background-color: #f06160;
+}
+
+.button:hover a {
+  color: white;
+}
+
 .mySlide {
   height: 430px;
 }
@@ -74,8 +96,7 @@ span.color-gainsboro {
   top: 0;
   width: 100%;
   opacity: 0;
-  -webkit-transition: .25s;
-          transition: .25s;
+  transition: .25s;
 }
 
 .mySlide .item .item-image .item-menu ul {
@@ -133,37 +154,36 @@ span.color-gainsboro {
 
 .mySlide .item:hover .item-menu {
   opacity: 1;
-  -webkit-transition: all 0.25s ease 0s;
-          transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s;
 }
 
 .dots-section {
   position: absolute;
   left: 50%;
-  width: 60%;
-  padding-left: 0;
-  margin-left: -30%;
+  width: 50%;
+  padding-left: 7px;
+  margin-left: -26%;
   text-align: center;
 }
 
 .dots-section .dot {
   background-color: #ddd;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 6px;
   cursor: pointer;
   display: inline-block;
-  height: 10px;
+  width: 6px;
+  height: 6px;
   margin: 1px;
   text-indent: -999px;
-  width: 10px;
 }
 
 .dots-section .active {
   background-color: #FF6766;
   border: 1px solid #FF6766;
-  height: 12px;
+  height: 8px;
   margin: 0;
-  width: 12px;
+  width: 8px;
 }
 
 /*-----------HEADER LEVEL ONE------------*/
@@ -558,20 +578,6 @@ span.color-gainsboro {
   display: inline;
 }
 
-.banner .description-left .button {
-  background-color: transparent;
-  border: 3px solid #ff6766;
-  padding: 10px 15px;
-  text-align: center;
-  height: 20px;
-  float: left;
-}
-
-.banner .description-left .button a {
-  font-weight: bolder;
-  color: black;
-}
-
 .banner .description-left .offer-tag {
   background: url("../images/banner/circle.png") no-repeat scroll 0 0 transparent;
   width: 103px;
@@ -678,6 +684,7 @@ span.color-gainsboro {
 }
 
 .trending-clothing .content .select a {
+  color: #999999;
   margin: 0px 5px;
   font-weight: bold;
 }
@@ -700,6 +707,70 @@ span.color-gainsboro {
 
 .trending-clothing .mySlides .mySlide:first-child {
   display: block;
+}
+
+/*-----------PROMOTION------------*/
+.promotion {
+  height: 320px;
+}
+
+.promotion .collumn {
+  background-color: #f2f4f5;
+  width: 50%;
+  float: left;
+}
+
+.promotion .collumn .side-left {
+  margin-left: 50px;
+  float: left;
+}
+
+.promotion .collumn .side-left .button {
+  margin: 0 35%;
+}
+
+.promotion .collumn .side-right {
+  margin-right: 50px;
+  float: right;
+}
+
+.promotion .collumn .side-right .button {
+  margin: 0 29%;
+}
+
+.promotion .collumn .side-left, .promotion .collumn .side-right {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  height: 200px;
+  text-align: center;
+  display: inline-block;
+  width: 60%;
+}
+
+.promotion .collumn .side-left span, .promotion .collumn .side-right span {
+  font-weight: bold;
+  display: block;
+}
+
+.promotion .collumn .side-left span.color-pink, .promotion .collumn .side-right span.color-pink {
+  display: inline-block;
+}
+
+.promotion .collumn .side-left span.with-border, .promotion .collumn .side-right span.with-border {
+  display: inline-block;
+  border-top: 2px solid #d1d1d1;
+  border-bottom: 2px solid #d1d1d1;
+  padding: 0 4px;
+  margin: 30px 0;
+  position: static;
+}
+
+.promotion .collumn .side-left .big-font, .promotion .collumn .side-right .big-font {
+  font-size: 32px;
+}
+
+.promotion .collumn:hover {
+  background-color: #eef1f2;
 }
 
 /*-----------FEATURED PRODUCTS------------*/
@@ -729,6 +800,7 @@ span.color-gainsboro {
 }
 
 .featured-products .content .select a {
+  color: #999999;
   margin: 0px 5px;
   font-weight: bold;
 }
@@ -743,4 +815,156 @@ span.color-gainsboro {
 
 .featured-products .mySlides {
   height: 860px;
+}
+
+/*-----------BLOG------------*/
+.blog {
+  background-color: #f2f4f5;
+  padding: 95px 0;
+}
+
+.blog .description > span {
+  text-align: center;
+  font-weight: bold;
+  display: block;
+}
+
+.blog .description .name {
+  font-size: 26px;
+}
+
+.blog .content {
+  position: relative;
+}
+
+.blog .content .select {
+  display: block;
+  height: 30px;
+  margin-bottom: 42px;
+  text-align: center;
+  position: relative;
+}
+
+.blog .content .select .prev-control, .blog .content .select .next-control {
+  position: absolute;
+  background: none repeat scroll 0 0 #e4e5e5;
+  width: 30px;
+  height: 30px;
+  top: 0;
+}
+
+.blog .content .select .prev-control i, .blog .content .select .next-control i {
+  padding: 5px 5px;
+  color: white;
+}
+
+.blog .content .select .prev-control:hover, .blog .content .select .next-control:hover {
+  background: none repeat scroll 0 0 #ff6766;
+}
+
+.blog .content .select .prev-control {
+  left: 47%;
+}
+
+.blog .content .select .next-control {
+  right: 47%;
+}
+
+.blog .mySlides {
+  height: 265px;
+}
+
+.blog .mySlides .mySlide {
+  height: inherit;
+  display: none;
+}
+
+.blog .mySlides .mySlide .collumn {
+  width: 50%;
+  height: inherit;
+  display: inline-block;
+  float: left;
+}
+
+.blog .mySlides .mySlide .collumn .item-text {
+  width: 47%;
+  padding-right: 20px;
+  display: inline-block;
+  float: left;
+}
+
+.blog .mySlides .mySlide .collumn .item-text h2 {
+  font-size: 45px;
+  text-align: left;
+  font-weight: 300;
+  color: #ff6766;
+  display: block;
+}
+
+.blog .mySlides .mySlide .collumn .item-text h2 span {
+  color: black;
+  font-size: 31px;
+  font-weight: 300;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .right {
+  font-weight: bold;
+  font-size: 12px;
+  height: 12px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #d1d1d1;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .right p {
+  width: 50%;
+  display: inline;
+  float: left;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .right span {
+  text-align: right;
+  width: 50%;
+  display: inline;
+  float: left;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .right span i {
+  padding: 0 5px;
+  color: #ff6766;
+  font-size: 14px;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .item-bottom-text {
+  font-size: 13px;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .item-bottom-text h4 {
+  font-weight: 600;
+}
+
+.blog .mySlides .mySlide .collumn .item-text .months .item-bottom-text p {
+  color: #999999;
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 20px;
+  text-transform: none;
+}
+
+.blog .mySlides .mySlide .collumn .item-img {
+  width: 47%;
+  display: inline-block;
+  float: right;
+}
+
+.blog .mySlides .mySlide .collumn .item-img img {
+  height: auto;
+  width: auto;
+  max-width: 252px;
+  max-height: 246px;
+  float: left;
+}
+
+.blog .mySlides .mySlide:first-child {
+  display: block;
 }
