--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1077,6 +1077,79 @@ span.color-gainsboro {
     }
 }
 
+/*-----------BRAND LOGOS------------*/
+
+.brand-logos {
+    padding: 10px 0;
+    
+    .description {
+        margin-bottom: 60px;
+        
+        h2 {
+            font-weight: bold;
+            color: #232323;
+            float: left;
+            font-size: 18px;
+            text-transform: uppercase;
+            width: 9%;
+        }
+        
+        .dotted-line {
+            border-bottom: 1px dotted #232323;
+            border-top: 1px dotted #232323;
+            height: 3px;
+            float: left;
+            margin-top: 9px;
+            width: 86%;
+        }
+
+        .select {
+            display: block;
+            height: 18px;
+            text-align: center;
+            position: relative;
+
+            .prev-control, .next-control {
+                padding: 0 4px;
+                position: relative;
+                background-color: transparent;
+                color: #999;
+                width: 18px;
+                height: 18px;
+                top: 0;
+                
+                i {
+                    font-weight: bold;
+                }
+            }
+
+            .prev-control:hover, .next-control:hover {
+                color: #232323;
+            }
+        }  
+    }
+    
+    .content {
+        position: relative; 
+    }
+    
+    .mySlides{
+        height: 120px;
+        
+        .mySlide {
+            margin: 0 10px;
+            height: inherit;
+            display: inline-block;
+            text-align: center;
+            width: 175px;
+            float: left;            
+        }
+        
+        .mySlide:nth-child(7), .mySlide:nth-child(8) {
+            display: none;
+        }
+    }
+}
 
 /*-----------COPYRIGHTS------------*/
 
