--- a/css/style.css
+++ b/css/style.css
@@ -1131,6 +1131,60 @@ span.color-gainsboro {
   display: none;
 }
 
+/*-----------FOOTER TOP------------*/
+footer .footer-top {
+  padding: 18px 0;
+  height: 32px;
+  background: none repeat scroll 0 0 #2a2a2a;
+}
+
+footer .footer-top .newsletter-wrapper {
+  width: 50%;
+  float: left;
+}
+
+footer .footer-top .newsletter-wrapper a i {
+  margin-right: 5px;
+}
+
+footer .footer-top .newsletter-wrapper input[type="text"] {
+  background: none repeat scroll 0 0 #232323;
+  border: medium none;
+  color: #fff;
+  margin: 0 10px;
+  padding: 8px 15px;
+  width: 43%;
+}
+
+footer .footer-top .newsletter-wrapper input[type="submit"] {
+  background: none repeat scroll 0 0 #232323;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 7px 15px;
+  text-transform: uppercase;
+}
+
+footer .footer-top .credit-cards {
+  width: 50%;
+  float: left;
+}
+
+footer .footer-top .credit-cards a {
+  display: inline-block;
+  float: left;
+  margin: 0 5px;
+}
+
+footer .footer-top .credit-cards a img {
+  width: auto;
+  height: 32px;
+}
+
+/*-----------SITE MAP------------*/
+footer .site-map {
+  background: none repeat scroll 0 0 #232323;
+}
+
 /*-----------COPYRIGHTS------------*/
 footer .copyrights {
   padding: 18px 0;
