--- a/css/style.css
+++ b/css/style.css
@@ -1143,6 +1143,10 @@ footer .footer-top .newsletter-wrapper {
   float: left;
 }
 
+footer .footer-top .newsletter-wrapper a {
+  font-weight: 500;
+}
+
 footer .footer-top .newsletter-wrapper a i {
   margin-right: 5px;
 }
@@ -1160,6 +1164,7 @@ footer .footer-top .newsletter-wrapper input[type="submit"] {
   background: none repeat scroll 0 0 #232323;
   border: 1px solid #fff;
   color: #fff;
+  font-weight: 500;
   padding: 7px 15px;
   text-transform: uppercase;
 }
@@ -1183,6 +1188,69 @@ footer .footer-top .credit-cards a img {
 /*-----------SITE MAP------------*/
 footer .site-map {
   background: none repeat scroll 0 0 #232323;
+}
+
+footer .site-map .wrapper {
+  height: 270px;
+  padding: 70px 0;
+}
+
+footer .site-map .wrapper .collumn {
+  padding: 0 15px;
+  width: 22%;
+  float: left;
+}
+
+footer .site-map .wrapper .collumn h5 {
+  font-weight: bold;
+  color: #cecece;
+  font-size: 15px;
+}
+
+footer .site-map .wrapper .collumn .colorline {
+  border-top: 1px solid #1a1a1a;
+  margin-bottom: 30px;
+  margin-top: 18px;
+  position: relative;
+}
+
+footer .site-map .wrapper .collumn .colorline:after {
+  border-top: 1px solid #b65050;
+  content: "";
+  left: 0;
+  position: absolute;
+  top: -1px;
+  width: 52px;
+}
+
+footer .site-map .wrapper .collumn ul.navigation li a {
+  color: #aaaaaa;
+  display: block;
+  font-weight: 500;
+  padding: 7px 0;
+  text-transform: none;
+}
+
+footer .site-map .wrapper .collumn address {
+  color: #aaaaaa;
+  line-height: 35px;
+  font-weight: 500;
+  text-transform: none;
+}
+
+footer .site-map .wrapper .collumn ul.social-links li {
+  display: inline;
+  margin-right: 5px;
+}
+
+footer .site-map .wrapper .collumn ul.social-links li a {
+  background: none repeat scroll 0 0 #373737;
+  color: #aaaaaa;
+  font-size: 14px;
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  padding: 12px 0 0 13px;
 }
 
 /*-----------COPYRIGHTS------------*/
