floatright -> float-right fix

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a {
   font-size: 17px; }
 
 /* line 32, D:/GIT/Aleksei_Rakitski/sass/style.scss */
-.floatright {
+.float-right {
   float: right;
   position: relative; }
 
